# Agentbreak

./: .dockerignore  .gitignore  CHANGELOG.md  DOCUMENTATION.md  Dockerfile  README.md  action.yml  cli.py  dev_to_blog_post.md  for claude  progress.md  pyproject.toml  requirements.txt
.github/workflows/: agentbreak.yml
agentbreak/: __init__.py  cli.py
agentbreak/api/: __init__.py  main.py
agentbreak/models/: attack_path.py  enums.py  tool_graph.py
agentbreak/output/: compliance_reporter.py  html_reporter.py  jsonl_reporter.py
agentbreak/parsers/: autogen_parser.py  crewai_parser.py  langgraph_parser.py  schema_parser.py
agentbreak/scanner/: executor.py  judge.py  path_finder.py  payload_generator.py
examples/: email_agent.yaml
tests/: conftest.py  test_agentbreak.py  test_security.py
